# node-usb

./: .npmignore  CMakeLists.txt  Readme.md  package.json  usb.js
example/: test.js
examples/: example.js
src/: device.cc  node_usb.cc  node_usb.h  transfer.cc
test/: usb.coffee  usb.test.js
